syntax = "proto3";
package warden.act.v1beta1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "shield/ast/ast.proto";
import "warden/act/v1beta1/action_vote.proto";
import "warden/act/v1beta1/template.proto";

option go_package = "github.com/warden-protocol/wardenprotocol/warden/x/act/types/v1beta1";

// Action wraps a message that will be executed when its associated template is
// satisfied.
message Action {
  uint64 id = 1;
  ActionStatus status = 2;
  // Original message that started the action, it will be executed when the
  // template is satisfied.
  google.protobuf.Any msg = 3;
  // Result of the action, it will be set when the action is completed.
  google.protobuf.Any result = 4;
  string creator = 5;
  // TimeoutHeight is the block height up until this action can be executed.
  uint64 timeout_height = 6;
  // created_at is a timestamp specifying when the action was created
  google.protobuf.Timestamp created_at = 7 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (gogoproto.stdtime) = true
  ];
  // updated_at is a timestamp specifying when the action's status was updated
  google.protobuf.Timestamp updated_at = 8 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (gogoproto.stdtime) = true
  ];
  // mentions is a list of addresses that are mentioned in the template.
  repeated string mentions = 9;
  // The expression to be evaluated for approval.
  .shield.ast.Expression approve_expression = 10 [(gogoproto.nullable) = false];
  // The expression to be evaluated for rejection.
  .shield.ast.Expression reject_expression = 11 [(gogoproto.nullable) = false];
  // The votes accepted from the voting participants.
  repeated ActionVote votes = 12;
}

// Current status of an action.
enum ActionStatus {
  // Unspecified status.
  ACTION_STATUS_UNSPECIFIED = 0;

  // Action is pending approval. This is the initial status.
  ACTION_STATUS_PENDING = 1;

  // Template has been satified, action has been executed.
  ACTION_STATUS_COMPLETED = 2;

  // Action has been revoked by its creator.
  ACTION_STATUS_REVOKED = 3;

  // Action has been rejected since TimeoutHeight has been reached.
  ACTION_STATUS_TIMEOUT = 4;
}
